# tog_sample

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.cmake  README.md
config/: config.json.example
docs/: global_todo.md
include/TOG/: tools.hpp  typedefs.hpp
include/tog/: tools.hpp  typedefs.hpp
src/: dummy.cpp  tog.cpp
test/: testTOG.cpp
